--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "equilibrium-finder",
   "version": "0.1.0",
+  "homepage": "https://qnighy.github.io/equilibrium-finder/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
